MB-24115 Fix alignment of logged-in user
 in nav header for Safari

Reviewed-on: http://review.couchbase.org/77483
Tested-by: Michael Wiederhold <mike@couchbase.com>

--- a/priv/public/ui/app/css/cbui-components.css
+++ b/priv/public/ui/app/css/cbui-components.css
@@ -1646,6 +1646,7 @@ input[type="checkbox"]:checked + label:before {
 .nav-header a.dropdown-toggle  {
   margin: 0 .5rem;
   padding-right: .5rem;
+  vertical-align: top;
 }
 .nav-header .dropdown-menu {
   top: 22px;
